# ggplot-rs

./: Cargo.toml
projects/gg-derive/: Cargo.toml
projects/gg-derive/src/: lib.rs
projects/gg-derive/src/expand_merge/: field_kind.rs  mod.rs
projects/gg-derive/tests/merge/: mod.rs
projects/gg-error/: Cargo.toml
projects/gg-error/src/: lib.rs
projects/gg-error/src/error/: error_std.rs  mod.rs
projects/gg-error/src/error_3rd/: mod.rs
projects/gg-error/src/error_3rd/for_csscolorparser/: mod.rs
projects/gg-errors/: Cargo.toml
projects/gg-errors/src/: lib.rs
projects/gg-errors/src/plot/: readme.md
projects/gg-plot/: Cargo.toml
projects/gg-plot/src/: lib.rs
projects/gg-plot/src/ggplot/: mod.rs
projects/gg-rust/: Cargo.toml  Readme.md
projects/gg-rust/src/: lib.rs
projects/gg-rust/src/backend/: mod.rs
projects/gg-rust/src/color/: mod.rs
projects/gg-rust/src/plot/: mod.rs  readme.md
projects/gg-rust/src/plot/aesthetic/: line_style.rs  mod.rs
projects/gg-rust/src/plot/coordinate/: mod.rs
projects/gg-rust/src/plot/coordinate/merge/: mod.rs
projects/gg-rust/src/plot/geometric/: mod.rs
projects/gg-rust/src/plot/merge_able/: mod.rs
projects/gg-rust/tests/: main.rs
projects/gg-rust/tests/aesthetic/: mod.rs
projects/gg-test-data/: Cargo.toml
projects/ggplot-derive/: Cargo.toml
projects/ggplot-derive/src/: lib.rs
projects/ggplot-derive/src/expand_merge/: field_kind.rs  mod.rs
projects/ggplot-derive/tests/: main.rs
projects/ggplot-derive/tests/merge/: mod.rs
