[package]
name = "ggplot-derive"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "derive(Merge) for GGPlot"
repository = "https://github.com/oovm/ggplot-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = "1.0.86"
quote= "1.0.14"

[dev-dependencies]

[features]
default = ["add"]
add = []