[package]
name = "ggplot"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
dyn-clone = "1.0.4"
csscolorparser = "0.5.0"

[dev-dependencies]

[features]
default = []
