[package]
name = "ggrust"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
csscolorparser = "0.5.0"

[dependencies.ggplot-error]
version =  "1.0.*"
path = "../gg-error"
features = ["csscolorparser"]

[dev-dependencies]

[features]
default = []
