[package]
name = "ggrust"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Grammar of Graphics in rust"
repository = "https://github.com/oovm/ggplot-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
csscolorparser = "0.5.0"
plotters-svg = "0.3.1"
plotters="0.3.1"
ggplot-derive = "0.1.1"

[dependencies.ggplot-error]
version =  "1.0.*"
path = "../gg-error"
features = ["csscolorparser"]

[dev-dependencies]

[features]
default = []
svg = []

