[package]
name = "ggplot-test-data"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Test datasets for ggplot"
repository = "https://github.com/oovm/ggplot-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]

[dev-dependencies]

[features]
default = []
