[package]
name = "ggplot-derive"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
syn = "1.0.86"
quote= "1.0.14"

[dev-dependencies]

[features]
default = []
